# data-engineering-learnings

./: .gitignore  CODE_OF_CONDUCT.MD  PULL_REQUEST_TEMPLATE.MD  README.MD
komalazram/: .gitignore  README.md  pyproject.toml
komalazram/.github/workflows/: CICD.yml
komalazram/dags/: datalake_dags.py
komalazram/data/: lake_silver._staging_master_bike_station_status.sql  lake_silver.master_bike_station_status.sql  merge_staging_to_master.sql  populate_gold_station_utilization_weekly.sql
komalazram/plugins/: citi_bike_scrapper_bronze.py  data_transformation_silver.py  schema_validation_bronze.py
komalazram/sql/: lake_gold.gold_station_utilization_weekly.sql  lake_silver._staging_master_bike_station_status.sql  lake_silver.master_bike_station_status.sql
komalazram/terraform/: .terraform.lock.hcl  backend.tf  main.tf  output.tf  provider.tf  variables.tf
komalazram/terraform/composer/: main.tf  output.tf  variables.tf
komalazram/terraform/storage/: main.tf  variables.tf
tuo-yang-nyc-taxi/: .env.example  .gitignore  Makefile  README.MD  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
tuo-yang-nyc-taxi/.streamlit/: config.toml
tuo-yang-nyc-taxi/airflow_pipeline/: .dockerignore  Dockerfile  requirements.txt
tuo-yang-nyc-taxi/creds/: gcp_service_account.example.json
tuo-yang-nyc-taxi/notebooks/: 01_explore_raw_data.ipynb  02_transform_trip_summary.ipynb  03_visualize_summary.ipynb  04_analyze_trip_summary.ipynb
tuo-yang-nyc-taxi/streamlit_app/: .dockerignore  Dockerfile  app.py  config.yaml  get_bigquery_client.py  requirements.txt
(+44 files in other folders)
