[project]
name = "komalazram"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]

[tool.poetry]
name = "komalazram"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.9"





[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
ruff = "^0.11.12"

[tool.flake8]
max-line-length = 100

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

